main container spacing fixes, image share

--- a/src/assets/css/layout/_main-container.scss
+++ b/src/assets/css/layout/_main-container.scss
@@ -10,7 +10,6 @@ section,
 
 .main-container {
   height: 100%;
-  padding-top: 70px;
   @include phone() {
     padding-bottom: 0;
   }
